# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\HealthCheckController;
+use App\Http\Controllers\Api\UserController;
 use Illuminate\Support\Facades\Route;
 
 Route::get('/health', HealthCheckController::class);
@@ -12,4 +13,9 @@ Route::post('/login', [AuthController::class, 'login']);
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
     Route::get('/auth-user', [AuthController::class, 'getAuthUser']);
+
+    Route::middleware('role:superadmin')->group(function () {
+        Route::apiResource('users', UserController::class)
+            ->only(['index', 'show', 'update', 'destroy']);
+    });
 });
